syntax = "proto3";

option csharp_namespace = "SpaceBattle.gRPC.Client";

package server;

service EndPoint{
  rpc Command(CommandRequest) returns (CommandReply);
  rpc Order(stream OrderRequest) returns (stream OrderReply);
  rpc MigrateGame (gameStatus) returns (newGameStatus);
  rpc AcceptGame (serializedGameMessage) returns (acceptStatus);
}
message CommandForObject{
	string Key = 1;
	string Value = 2;
}

message CommandRequest {
	string GameId = 1;
	string CommandType = 2;
	string GameItemId = 3;
	repeated CommandForObject Args = 4;
}

message CommandReply {
  int32 status = 1;
}

message OrderReply {
  bool status = 1;
}

message OrderRequest {
  string GameId = 1;
  map<string, string> map = 2;
}

message serializedGameMessage{
  string serializedGame = 1;
}

message gameStatus{
  string gameId = 1;
  string newServerId = 2;
}

message acceptStatus{
  bool acceptStatus = 1;
}

message newGameStatus{
  bool gameStatus = 1;
}
